apps/hello/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: ${NAMESPACE_PREFIX}-hello
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 80
