apps/hello/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello
  namespace: ${NAMESPACE_PREFIX}-hello
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hello.${DOMAIN}`)
      kind: Rule
      services:
        - name: hello
          port: 80
  tls:
    secretName: hello-tls
